Closed
Bug 821449
Opened 13 years ago
Closed 13 years ago
{inc} After incremental layout of stretched, nested flex container, inner flex container is no longer stretched
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: dholbert, Assigned: dholbert)
References
Details
Attachments
(2 files)
|
668 bytes,
text/html
|
Details | |
|
4.46 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
STR: Load testcase; hover the green box; un-hover.
EXPECTED RESULTS: black border appears when hovered. No red visible.
ACTUAL RESULTS: black border appears _and the green box shrinkwraps its text's height_ when hovered, and stays that height after un-hovered.
Testcase reduced from bug 820111.
See also related bug 821426 (though that bug's patch doesn't fix this bug's testcase).
| Assignee | ||
Updated•13 years ago
|
Summary: {inc} Incremental layout of stretched, nested flex container, inner flex container is no longer stretched. → {inc} Incremental layout of stretched, nested flex container, inner flex container is no longer stretched
| Assignee | ||
Updated•13 years ago
|
Summary: {inc} Incremental layout of stretched, nested flex container, inner flex container is no longer stretched → {inc} After incremental layout of stretched, nested flex container, inner flex container is no longer stretched
| Assignee | ||
Comment 1•13 years ago
|
||
This fix marks our children as CONTAINS_RELATIVE_HEIGHT if they're in a horizontal flexbox & they're stretched vertically.
Testcase included (as a modified copy of the testcase from bug 821426). I verified that it fails before this patch is applied, and passes afterwards.
Attachment #692213 -
Flags: review?(dbaron)
Comment on attachment 692213 [details] [diff] [review]
fix v1
r=dbaron
Attachment #692213 -
Flags: review?(dbaron) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Flags: in-testsuite+
| Assignee | ||
Comment 4•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•