Bug 821449: Marked flex items whose height is stretched (via "align-items/align-self") as having a relative height. r=dbaron